feat: バージョン情報の表示を実装

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,9 @@
             <archive>
               <manifest>
                 <mainClass>cat_java.App</mainClass>
+                <addDefaultImplementationEntries>
+                  true
+                </addDefaultImplementationEntries>
               </manifest>
             </archive>
           </configuration>
